Bug 111993 - Rx and ry attributes of SVG <rect/> element should distinguish between unset attribute and "0". Patch by jonathan.watt@strath.ac.uk, r=scooter.